--- a/themes/custom/espn_theme/css/main.css
+++ b/themes/custom/espn_theme/css/main.css
@@ -61,4 +61,61 @@ header div nav ul a {
 #block-espn-theme-site-branding img {
   height: 65px;
   margin-bottom: 0;
+}
+
+main {
+  background-color: gray;
+  color: #fff;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+main .layout-content-top {
+  margin: auto;
+  background-color: black;
+  color: white;
+  width: 90%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin-top: 10px;
+  border: 1px solid white;
+  border-radius: 20px;
+}
+main .layout-content {
+  margin: auto;
+  background-color: black;
+  color: white;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 10px;
+  border: 1px solid white;
+  border-radius: 10px;
+}
+
+footer {
+  background-color: #000;
+  color: #fff;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  border-top: 2px solid white;
 }/*# sourceMappingURL=main.css.map */
