--- a/themes/custom/espn_theme/scss/main.scss
+++ b/themes/custom/espn_theme/scss/main.scss
@@ -74,3 +74,64 @@ header {
         margin-bottom: 0;
     }
 }
+
+main {
+    background-color: gray;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+
+    .layout-content-top {
+        margin: auto;
+        background-color: black;
+        color: white;
+        width: 90%;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        margin-top: 10px;
+        border: 1px solid white;
+        border-radius: 20px;
+
+    }
+
+    .layout-content {
+        margin: auto;
+        background-color: black;
+        color: white;
+        width: 50%;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        margin: 10px;
+        border: 1px solid white;
+        border-radius: 10px;
+    }
+}
+
+footer {
+    background-color: #000;
+    color: #fff;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    border-top: 2px solid white;
+   
+}
