Getting array response for nfl

--- a/themes/custom/espn_theme/css/main.css
+++ b/themes/custom/espn_theme/css/main.css
@@ -118,4 +118,6 @@ footer {
   padding: 0;
   margin: 0;
   border-top: 2px solid white;
+  position: fixed;
+  bottom: 0;
 }/*# sourceMappingURL=main.css.map */
