rsvp list saving

--- a/themes/custom/espn_theme/templates/page.html.twig
+++ b/themes/custom/espn_theme/templates/page.html.twig
@@ -1,4 +1,13 @@
+{# Add system messages to the top of the page #}
+{# 
 
+  {% if messages %}
+    <div class="messages">
+      {{ messages }}
+    </div>
+  {% endif %}
+
+ #}
 
 <div class="layout-container">
 
