--- a/themes/custom/espn_theme/css/main.css
+++ b/themes/custom/espn_theme/css/main.css
@@ -6,6 +6,20 @@
   text-align: center;
 }
 
+.messages {
+  background-color: #000;
+  color: #fff;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  border-bottom: 2px solid white;
+}
+
 #espn-menu {
   background-color: gray;
   color: black;
