--- a/themes/custom/espn_theme/scss/main.scss
+++ b/themes/custom/espn_theme/scss/main.scss
@@ -6,7 +6,19 @@
     text-align: center;
 }
 
-
+.messages {
+    background-color: #000;
+    color: #fff;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    border-bottom: 2px solid white;
+}
 
 #espn-menu {
     background-color: gray;
@@ -135,5 +147,5 @@ footer {
     border-top: 2px solid white;
     position: fixed;
     bottom: 0;
-    
+
 }
